--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,233 @@
+:root {
+  --main-color: #212121;
+  --secondary-color: #757575;
+  --accent-color: #2196f3;
+  --light-color: #ffffff;
+  --light-alfa-color: rgba(255, 255, 255, 0.6);
+  --dark-color: #000000;
+  --bg-main-color: #ffffff;
+  --bg-light-color: #f5f4fa;
+  --bg-dark-color: #2f303a;
+}
 body {
   font-family: 'Roboto', sans-serif;
-  color: blue;
-  background-color: aqua;
+  color: var(--main-color);
+  background-color: var(--bg-main-color);
+}
+a {
+  text-decoration: none;
+}
+ul {
+  list-style-type: none;
+}
+/* logo*/
+.logo {
+  font-family: 'Raleway';
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+}
+.logo-first-part {
+  color: var(--accent-color);
+}
+.logo-second-dark-part {
+  color: var(--dark-color);
+}
+.logo-second-light-part {
+  color: var(--light-color);
+}
+/* header */
+.header-nav-link {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--main-color);
+}
+.header-nav-link:hover,
+.header-nav-link:focus {
+  color: var(--accent-color);
+}
+.header-nav-link.active {
+  color: var(--accent-color);
+}
+.header-nav-link.active:hover,
+.header-nav-link.active:focus {
+  color: var(--main-color);
+}
+.header-contacts-link {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color);
+}
+.header-contacts-link:hover,
+.header-contacts-link:focus {
+  color: var(--accent-color);
+}
+/* hero */
+.hero {
+  background-color: var(--bg-dark-color);
+}
+.hero-title {
+  font-family: 'Roboto';
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  letter-spacing: 0.06em;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--light-color);
+}
+.hero-button {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: var(--light-color);
+  background-color: var(--accent-color);
+}
+/* features */
+.features-title {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+  visibility: hidden;
+}
+.features-title-secondary {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--main-color);
+}
+.features-text {
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+}
+/* activity*/
+.activity-title {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.7;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+}
+.team-title-secondary {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  /* text-align: center; */
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+}
+.team-text {
+  font-family: 'Roboto';
+  font-size: 16px;
+  line-height: 1.2;
+  /* text-align: center; */
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+}
+/* team */
+.team-title {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.7;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+}
+/* portfolio */
+/* visibility: hidden; */
+.filter-title {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+  visibility: hidden;
+}
+.filter-button {
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+  background-color: var(--bg-light-color);
+}
+.filter-button:hover,
+.filter-button:focus {
+  color: var(--light-color);
+  background-color: var(--accent-color);
+}
+.portfolio-title {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: var(--main-color);
+  visibility: hidden;
+}
+.portfolio-title-secondary {
+  font-family: 'Roboto';
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--main-color);
+}
+.portfolio-text {
+  font-family: 'Roboto';
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+  color: var(--secondary-color);
+}
+/* footer */
+.footer {
+  background-color: var(--bg-dark-color);
+}
+.footer-link {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--light-alfa-color);
+}
+.footer-link.map {
+  color: var(--light-color);
+}
+.footer-link.map:hover,
+.footer-link.map:focus,
+.footer-link:hover,
+.footer-link:focus {
+  color: var(--accent-color);
 }
