--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ body {
 /* logo */
 .logo {
   color: var(--accent-color);
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -105,6 +105,7 @@ body {
   line-height: 1.18;
 }
 .list-example .title {
+  font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   text-align: left;
